--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-ejs-monster": "^3.1.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
